Removed comments from EventManager